--- a/requisitante.css
+++ b/requisitante.css
@@ -7,6 +7,15 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.image-box{
+    width: 50%;
+    height: 100%;
+}
+.image-box img{
+    width: 100%;
+    height: 95%;
+    margin: 0 60px;
+}
 .container-login{
     position: relative;
     width: 100%;
@@ -103,30 +112,5 @@
 
 /* Fim do CSS da página de login operador*/
 
-/*Inicio css área de selecionar operador e requisitante */
-
-.container{
-    background-color: #32324f;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.botao{
-    background-color:#4aa4ee;
-    width: 400px;
-    height: 50px;
-    padding: 10px;
-    margin: 50px;
-    text-align: center;
-    border-radius: 5px;
-}
-.container p{ 
-    font-size: 25px;
-    ;
-}
 
 
