--- a/inicio.css
+++ b/inicio.css
@@ -19,7 +19,7 @@
     background-color:#4aa4ee;
     width: 400px;
     height: 50px;
-    margin: 25px;
+    margin: 10px;
     text-align: center;
     border-radius: 5px;
     cursor: pointer;
@@ -44,13 +44,13 @@
     font-weight: 600;
     font-size: 1.5em;
     text-transform: uppercase;
-    margin-bottom: 10px;
+    margin-top: 25px;
 }
 
 h1{
     color: #32324f;
     font-size: 2em;
     text-transform: uppercase;
-    margin-bottom: 100px;
+    margin-bottom: 70px;
     text-align: center;
 }
