Organização nas pastas
Fiz uma melhor organização nas pastas para que o Flask possa funcionar

--- a/template/loginoperador.html
+++ b/template/loginoperador.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/CSS/operador.css">
+    <link rel="stylesheet" href="/static/CSS/operador.css">
 </head>
 <body>
     <div class="container-login">
         <div class="image-box">
-            <img src="/img/operador.jpg" alt="Homem trabalhando">
+            <img src="/static/img/operador.jpg" alt="Homem trabalhando">
         </div>
         <div class="content-box">
             <div class="form-box">
