--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,11 +17,11 @@
         <div class="principal">
 
             <div class="menu">
-                <a id="home" href="/template/layout.html">
+                <a id="home" href="/templates/layout.html">
                     <span id="home" class="material-symbols-outlined">home</span>
                 </a>
 
-                <a id="adicionar" href="/template/chamados.html">
+                <a id="adicionar" href="/templates/chamados.html">
                     <span class="material-symbols-outlined">add_circle</span>
                 </a>
 
