--- a/templates/loginoperador.html
+++ b/templates/loginoperador.html
@@ -17,12 +17,12 @@
                 <form>
                     <div class="input-box">
                         <span>Usuário</span>
-                        <input type="text" placeholder="Usuário"> 
+                        <input type="text" placeholder="Usuário" required> 
                     </div>
 
                     <div class="input-box">
                         <span>Senha</span>
-                        <input type="password" placeholder="Senha"> 
+                        <input type="password" placeholder="Senha" required> 
                     </div>
 
                     <div class="esqueceu-senha">
