--- a/templates/loginrequisitante.html
+++ b/templates/loginrequisitante.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/CSS/requisitante.css">
+    <link rel="stylesheet" href="/static/CSS/requisitante.css">
 </head>
 <body>
     <div class="container-login">
         <div class="image-box">
-            <img src="/img/requisitante.jpg" alt="Homem trabalhando">
+            <img src="/static/img/requisitante.jpg" alt="Homem trabalhando">
         </div>
         <div class="content-box">
             <div class="form-box">
                 <h2>Login Requisitante</h2>
-                <form>
+                <form action="acessorequisitante" method="post">
                     <div class="input-box">
                         <span>Usuário</span>
-                        <input type="text" placeholder="Usuário"> 
+                        <input name="usuariorequisitante" type="text" placeholder="Usuário" required> 
                     </div>
 
                     <div class="input-box">
                         <span>Senha</span>
-                        <input type="password" placeholder="Senha"> 
+                        <input name="senharequisitante" type="password" placeholder="Senha" required> 
                     </div>
 
                     <div class="esqueceu-senha">
