--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -21,8 +21,8 @@
         <h1> Cadastro </h1>
         <label for="selecionarTipoCadastro">Requisitante ou Operador?</label>
         <select name="selecionarTipoCadastro" id="selecionarTipoCadastro">
-            <option value="Requisitante">Requisitante</option>
-            <option value="Operador">Operador</option>
+            <option value="requisitante">Requisitante</option>
+            <option value="operador">Operador</option>
         </select>
         <button type="submit">Continuar</button>
     </form>
@@ -57,6 +57,6 @@
 
 
 
-    <!-- <script src="/static/javascript/cadastro.js"></script> -->
+    <script src="/static/JS/cadastro.js"></script>
 </body>
 </html>
