--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>                
-                <li class="btnlogin"><a href="">Login</a></li>
+                <li class="btnlogin"><a href="/login">Login</a></li>
             </ul>
         </nav>
     </header>
@@ -27,7 +27,7 @@
         <button type="submit">Continuar</button>
     </form>
 
-    <form action="#" id="cadastrorequisitante"  method="post">
+    <form action="/requisitantecadastro" id="cadastrorequisitante"  method="post">
         <h1>Cadastro Requisitante</h1>
         <p id="msgErrorequisitante" >AS SENHAS NÃO SÃO IGUAIS!</p>
         <label for="emailrequisitante">Email</label>
@@ -41,7 +41,7 @@
         <input type="submit" value="Enviar">
     </form>
 
-    <form action="" id="cadastrooperador"  method="post">
+    <form action="/cadastrooperador" id="cadastrooperador"  method="post">
         <h1>Cadastro Operador</h1>
         <p id="msgErrooperador" >AS SENHAS NÃO SÃO IGUAIS!</p>
         <label for="emailoperador">Email</label>
