--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         </button>
         <p>Operador</p>
         <button class="botao">
-                <a href="/templates/loginoperador.html">Selecionar</a>
+                <a href="/loginoperador">Selecionar</a>
         </button>
     </div>
 </body>
