--- a/templates/loginoperador.html
+++ b/templates/loginoperador.html
@@ -14,7 +14,7 @@
         <div class="content-box">
             <div class="form-box">
                 <h2>Login Operador</h2>
-                <form>
+                <form action="acessooperador" method="post">
                     <div class="input-box">
                         <span>Usuário</span>
                         <input type="text" placeholder="Usuário" required> 
