Pausa no backend
Feita algumas alterações no backend, usuário consegue criar login e senha, e consegue logar mediante seu usuário e senha

--- a/static/CSS/cadastro.css
+++ b/static/CSS/cadastro.css
@@ -139,9 +139,15 @@ input[type="text"]{
     font-weight: bold;
     display: none;
 }
+
 #cadastrorequisitante , #cadastrooperador{
     margin-top: 3%;
 }
+
 #cadastrorequisitante , #cadastrooperador{
     display: none; 
+}
+
+#alerta{
+    color: red;
 }
