--- a/templates/loginoperador.html
+++ b/templates/loginoperador.html
@@ -15,6 +15,13 @@
             <div class="form-box">
                 <h2>Login Operador</h2>
                 <form action="acessooperador" method="post">
+                    {% set mensagens = get_flashed_messages()   %}
+                    {% if mensagens %}
+                    <div id="alerta">
+                        {{ mensagens[0] }}
+                    </div>
+
+                    {% endif %}
                     <div class="input-box">
                         <span>Usuário</span>
                         <input type="text" placeholder="Usuário" required> 
