--- a/static/CSS/chamados.css
+++ b/static/CSS/chamados.css
@@ -16,7 +16,7 @@
     border: none;
     font-size: 17px;
     color: #32324f;
-    background-color: #ecf2f7;
+    background-color: #c7cccf;
     border-radius: 5px;
     
 }
@@ -27,7 +27,7 @@
     border: none;
     font-size: 17px;
     color: #32324f;
-    background-color: #ecf2f7;
+    background-color: #c7cccf;
     border-radius: 5px;
 }
 
@@ -39,7 +39,7 @@
     border: none;
     font-size: 17px;
     color: #32324f;
-    background-color: #ecf2f7;
+    background-color: #c7cccf;
     border-radius: 5px;
 }
 
@@ -50,7 +50,7 @@
     border: none;
     font-size: 17px;
     color: #32324f;
-    background-color: #ecf2f7;
+    background-color: #c7cccf;
     border-radius: 5px;
 }
 
@@ -61,7 +61,7 @@
     border: none;
     font-size: 17px;
     color: #32324f;
-    background-color: #ecf2f7;
+    background-color: #c7cccf;
     border-radius: 5px;
 }
 .conteudo{
