--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,32 +10,33 @@
 <body>
     <div class="ContainerPrincipal">
         <header class="cabecario">
-            <img src="/static/img/logo.png" alt="logo">
-            <h4 id="operador">Operador</h4>
+            <img class="logo" src="/static/img/martelo.png" alt="logo">
+            <h4 id="operador">Requisitante</h4>
         </header>
 
         <div class="principal">
 
             <div class="menu">
-                <a id="home" href="/templates/layout.html">
+                <a id="home" href="/layout">
                     <span id="home" class="material-symbols-outlined">home</span>
                 </a>
 
-                <a id="adicionar" href="/templates/chamados.html">
+                <a id="adicionar" href="/chamados">
                     <span class="material-symbols-outlined">add_circle</span>
                 </a>
 
-                <a id="documentos" href="#">
+                <a id="documentos" href="/relatorio">
                     <span class="material-symbols-outlined">folder</span>
                 </a>
 
-                <a id="sair" href="#">
+                <a id="sair" href="/sair">
                     <span class="material-symbols-outlined">logout</span>
                 </a>
             </div>
 
             <div class="areagraficos">
-                <h1>Nesssa área vai ser os gráficos que eu não sei fazer</h1>
+                <img class="graficos" src="/static/img/graficos.png" alt="graficos">
+                <h3>Esta área será baseada nas manutenções atendidas, onde haverá gráficos para análise. O projeto ainda está em desenvolvimento.</h3>
             </div>
 
         </div>
