--- a/static/CSS/layout.css
+++ b/static/CSS/layout.css
@@ -15,10 +15,13 @@ header{
     width: 100%;
 }
 
-img{
-    margin: 5px;
-    margin-left: 5%;
-    width: 120px;
+.logo{
+    margin: 10px;
+    margin-left: 2%;
+    width: 50px;
+    position: absolute;
+    z-index: 1;
+    transform: rotate(35deg);
 }
 
 h4{
@@ -70,4 +73,9 @@ footer{
     margin: 0;
     width: 100%;
     text-align: center;
+}
+
+.graficos{
+    width:auto;
+    height: 80%;
 }
