--- a/templates/chamados.html
+++ b/templates/chamados.html
@@ -6,31 +6,31 @@
     <title>Novo chamado</title>
     <link rel="stylesheet" href="/static/CSS/chamados.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
+    <link rel="shortcut icon" href="/static/img/martelo.png" type="image/x-icon">
 </head>
 <body>
     <div class="ContainerPrincipal">
         <header class="cabecario">
-            <img src="/static/img/logo.png" alt="logo">
-            <h4 id="operador">Operador</h4>
+            <img class="logo" src="/static/img/martelo.png" alt="logo">
+            <h4 id="operador">Requisitante</h4>
         </header>
 
         <div class="principal">
 
             <div class="menu">
-                <a id="home" href="/templates/layout.html">
+                <a id="home" href="/layout">
                     <span id="home" class="material-symbols-outlined">home</span>
                 </a>
 
-                <a id="adicionar" href="/templates/chamados.html">
+                <a id="adicionar" href="/chamados">
                     <span class="material-symbols-outlined">add_circle</span>
                 </a>
 
-                <a id="documentos" href="#">
+                <a id="documentos" href="/relatorio">
                     <span class="material-symbols-outlined">folder</span>
                 </a>
 
-                <a id="sair" href="#">
+                <a id="sair" href="/sair">
                     <span class="material-symbols-outlined">logout</span>
                 </a>
             </div>
