--- a/templates/loginoperador.html
+++ b/templates/loginoperador.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="/static/CSS/operador.css">
+    <link rel="shortcut icon" href="/static/img/martelo.png" type="image/x-icon">
 </head>
 <body>
     <div class="container-login">
