--- a/templates/documentos.html
+++ b/templates/documentos.html
@@ -42,6 +42,7 @@
                                     <tr>
                                       <th>Nº do Chamado</th>
                                       <th>Equipamento</th>
+                                      <th>Identificação</th>
                                       <th>Local</th>
                                       <th>Data do problema</th>
                                       <th>Classificação</th>
@@ -51,6 +52,7 @@
                                     <tr>
                                       <td>PO1234</td>
                                       <td>Câmera</td>
+                                      <td>192.168.144.123</td>
                                       <td>Pintura</td>
                                       <td>20/05/2024</td>
                                       <td>Manutenção preventiva</td>
@@ -60,6 +62,7 @@
                                     <tr>
                                         <td>PO1234</td>
                                         <td>Câmera</td>
+                                        <td>192.168.144.123</td>
                                         <td>Pintura</td>
                                         <td>20/05/2024</td>
                                         <td>Manutenção preventiva</td>
@@ -69,6 +72,7 @@
                                       <tr>
                                         <td>PO1234</td>
                                         <td>Câmera</td>
+                                        <td>192.168.144.123</td>
                                         <td>Pintura</td>
                                         <td>20/05/2024</td>
                                         <td>Manutenção preventiva</td>
@@ -78,6 +82,7 @@
                                       <tr>
                                         <td>PO1234</td>
                                         <td>Câmera</td>
+                                        <td>192.168.144.123</td>
                                         <td>Pintura</td>
                                         <td>20/05/2024</td>
                                         <td>Manutenção preventiva</td>
