--- a/static/CSS/documentos.css
+++ b/static/CSS/documentos.css
@@ -5,11 +5,11 @@ table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
-    margin: 10%;
+    margin: 5%;
   }
   
   td, th {
-    border: 1px solid #dddddd;
+    border: 1px solid #a7a6a6;
     text-align: left;
     padding: 8px;
   }
